fixed white space below app

--- a/src/app/layouts/main/main.component.scss
+++ b/src/app/layouts/main/main.component.scss
@@ -3,7 +3,7 @@
 }
 
 .app-container {
-	background-color: #dee8ff;
+	background-color: var(--mat-drawer-content-color);
 	display: flex;
 	flex-direction: column;
 	position: absolute;
